[troubleshooter] Ping: Fix unreadable font

--- a/src/postix/static/troubleshooter/scss/postix.scss
+++ b/src/postix/static/troubleshooter/scss/postix.scss
@@ -66,10 +66,12 @@ h1 .glyphicon {
     appearance: none;
     -webkit-appearance: none;
     -moz-appearance: none;
+    color: white;
 }
 .ping-form .btn-ping {
     background-color: black;
     border: 1px solid grey;
+    color: white;
     font-size: 18px;
     font-weight: bold;
     margin: 0px;
